--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8" />
   <title>F1 Paddock V2</title>
 
-  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Supabase UMD (ONLY ONCE) -->
+  <!-- Supabase UMD -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.js"></script>
 </head>
 
@@ -17,24 +16,22 @@
 
   <h1 class="text-3xl font-bold text-center">F1 PADDOCK</h1>
 
-  <!-- LANDING -->
   <div id="landing" class="space-y-3">
     <input id="roomName" placeholder="Room name"
       class="w-full p-3 bg-black border rounded" />
 
     <div class="flex gap-2">
-      <button onclick="createRoom()"
+      <button id="createBtn"
         class="w-1/2 bg-red-600 py-2 rounded">Create</button>
-      <button onclick="joinRoomPrompt()"
+      <button id="joinBtn"
         class="w-1/2 bg-white text-black py-2 rounded">Join</button>
     </div>
   </div>
 
-  <!-- ROOM -->
   <div id="room" class="hidden space-y-4">
     <div class="flex justify-between text-sm">
       <span>Room: <b id="roomCode"></b></span>
-      <button onclick="copyCode()" class="underline">Copy</button>
+      <button id="copyBtn" class="underline">Copy</button>
     </div>
 
     <input id="userName" placeholder="Your name"
@@ -48,7 +45,7 @@
       <option value="mclaren">McLaren</option>
     </select>
 
-    <button onclick="joinRoom()"
+    <button id="joinRoomBtn"
       class="w-full bg-red-600 py-2 rounded">
       Join as Strategist
     </button>
@@ -58,7 +55,7 @@
     <input id="predictionText" placeholder="Your prediction"
       class="w-full p-3 bg-black border rounded" />
 
-    <button onclick="addPrediction()"
+    <button id="predictBtn"
       class="w-full bg-red-600 py-2 rounded">
       Add Prediction
     </button>
@@ -68,83 +65,7 @@
 
 </div>
 
-<script>
-/* ================= SUPABASE ================= */
-const SUPABASE_URL = "https://anlktalskporlebnghpp.supabase.co";
-const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImFubGt0YWxza3BvcmxlYm5naHBwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njg3NDA0NTksImV4cCI6MjA4NDMxNjQ1OX0.fF8Li77jRqGqtTk2CRIXR1J1SS8AVb2YeuXzT-5J-Eg";
-
-window.sb = window.supabase.createClient(
-  SUPABASE_URL,
-  SUPABASE_KEY
-);
-
-/* ================= STATE ================= */
-let currentRoom = null;
-let participantId = null;
-
-/* ================= HELPERS ================= */
-function code() {
-  return Math.random().toString(36).substring(2, 8).toUpperCase();
-}
-
-/* ================= ACTIONS ================= */
-window.createRoom = async function () {
-  const name = roomName.value || "F1 Room";
-  const roomCode = code();
-
-  const { data, error } = await sb
-    .from("rooms")
-    .insert({ name, code: roomCode })
-    .select()
-    .single();
-
-  if (error) return alert(error.message);
-  enterRoom(data);
-};
-
-window.joinRoomPrompt = async function () {
-  const c = prompt("Room code?");
-  if (!c) return;
-
-  const { data, error } = await sb
-    .from("rooms")
-    .select()
-    .eq("code", c)
-    .single();
-
-  if (error) return alert("Room not found");
-  enterRoom(data);
-};
-
-function enterRoom(room) {
-  currentRoom = room;
-  landing.classList.add("hidden");
-  room.classList.remove("hidden");
-  roomCode.textContent = room.code;
-  loadPredictions();
-}
-
-window.joinRoom = async function () {
-  const name = userName.value;
-  const teamColor = team.value;
-  if (!name) return alert("Enter name");
-
-  const { data, error } = await sb
-    .from("participants")
-    .insert({
-      room_id: currentRoom.id,
-      name,
-      team_color: teamColor
-    })
-    .select()
-    .single();
-
-  if (error) return alert(error.message);
-  participantId = data.id;
-};
-
-window.addPrediction = async function () {
-  if (!participantId) return alert("Join first");
-
-  const text = predictionText.value;
-  if (
+<!-- YOUR JS -->
+<script src="./app.js"></script>
+</body>
+</html>
