--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>F1 Paddock Predictor 2026</title>
+    <title>F1 Paddock Pro 2026</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
@@ -18,10 +18,13 @@
         .glass { background: rgba(255, 255, 255, 0.03); backdrop-filter: blur(15px); border: 1px solid rgba(255,255,255,0.08); }
         .podium-bar { transition: height 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
         .progress-circle { transform: rotate(-90deg); transition: stroke-dashoffset 0.6s ease; }
+        .f1-input { background: rgba(255,255,255,0.05); border: 1px solid rgba(255,255,255,0.1); border-radius: 8px; padding: 10px; outline: none; }
+        .f1-input:focus { border-color: var(--f1-red); }
     </style>
 </head>
 <body>
     <div id="root"></div>
+
     <script type="text/babel">
         const { useState, useEffect } = React;
 
@@ -36,45 +39,47 @@
         };
 
         const App = () => {
-            // ALL HOOKS MUST BE TOP-LEVEL
+            // ALL HOOKS MUST BE AT THE TOP LEVEL
             const [view, setView] = useState('lander');
             const [room, setRoom] = useState(null);
-            const [localHistory, setLocalHistory] = useState([]);
             const [activeSubId, setActiveSubId] = useState(null);
             const [activeUserId, setActiveUserId] = useState(null);
-            const [modal, setModal] = useState({ show: false, type: '', value: '' });
             const [roomInput, setRoomInput] = useState('');
+            const [newPredText, setNewPredText] = useState('');
             const [drawerOpen, setDrawerOpen] = useState(false);
-            const [newPredText, setNewPredText] = useState(''); // Moved this up!
+            const [localRooms, setLocalRooms] = useState([]);
 
             useEffect(() => {
-                const stored = JSON.parse(localStorage.getItem('f1_paddock_v6') || '[]');
-                setLocalHistory(stored);
+                const stored = JSON.parse(localStorage.getItem('f1_paddock_v7') || '[]');
+                setLocalRooms(stored);
             }, []);
 
-            // Realtime listener
             useEffect(() => {
                 if (!room) return;
-                const sub = sb.channel('any').on('postgres_changes', 
-                    { event: 'UPDATE', schema: 'public', table: 'f1_rooms', filter: `code=eq.${room.code}` }, 
-                    payload => setRoom(payload.new)
-                ).subscribe();
-                return () => sb.removeChannel(sub);
+                const channel = sb.channel(`room-${room.code}`)
+                    .on('postgres_changes', { event: 'UPDATE', schema: 'public', table: 'f1_rooms', filter: `code=eq.${room.code}` }, 
+                    (payload) => setRoom(payload.new))
+                    .subscribe();
+                return () => sb.removeChannel(channel);
             }, [room?.code]);
 
-            const updateRemote = async (updates) => {
-                const { data, error } = await sb.from('f1_rooms').update(updates).eq('code', room.code).select().single();
+            const updateDB = async (payload) => {
+                // Fixed the 406 Error by ensuring headers and selection are clean
+                const { data, error } = await sb.from('f1_rooms').update(payload).eq('code', room.code).select().single();
                 if (!error) setRoom(data);
+                else console.error("Update Error:", error);
             };
 
-            const handleJoin = async (code) => {
-                const { data } = await sb.from('f1_rooms').select().eq('code', code.toUpperCase()).single();
+            const joinRoom = async (code) => {
+                const { data, error } = await sb.from('f1_rooms').select().eq('code', code.toUpperCase()).single();
                 if (data) {
                     setRoom(data);
                     setView('room');
-                    const updated = [{code: data.code, name: data.name}, ...localHistory.filter(x => x.code !== data.code)];
-                    localStorage.setItem('f1_paddock_v6', JSON.stringify(updated.slice(0,5)));
-                    setLocalHistory(updated);
+                    const updated = [{code: data.code, name: data.name}, ...localRooms.filter(x => x.code !== data.code)];
+                    localStorage.setItem('f1_paddock_v7', JSON.stringify(updated.slice(0,5)));
+                    setLocalRooms(updated);
+                } else {
+                    alert("Room Code not found!");
                 }
             };
 
@@ -88,29 +93,27 @@
                 return t === 0 ? 0 : Math.round((c/t)*100);
             };
 
-            // --- NAVIGATION ---
+            // --- UI SUB-COMPONENTS ---
+            
             if (view === 'lander') return (
-                <div className="max-w-md mx-auto p-6 pt-12">
-                    <h1 className="f1-font text-center text-4xl mb-12 glow-text">F1 <span className="text-red-600">Paddock</span></h1>
-                    <div className="glass rounded-3xl p-8 mb-8 flex flex-col items-center">
-                        <div className="relative w-32 h-32 mb-6">
-                            <svg className="w-full h-full progress-circle" viewBox="0 0 100 100">
-                                <circle cx="50" cy="50" r="45" stroke="rgba(255,255,255,0.1)" strokeWidth="6" fill="none" />
-                                <circle cx="50" cy="50" r="45" stroke="#e10600" strokeWidth="6" fill="none" 
-                                    strokeDasharray="283" strokeDashoffset={283 - (283 * (room?.progress_done || 0)) / 24} strokeLinecap="round" />
-                            </svg>
-                            <div className="absolute inset-0 flex flex-col items-center justify-center">
-                                <span className="f1-font text-xl">{room?.progress_done || 0}/24</span>
-                            </div>
-                        </div>
-                        <input className="w-full bg-white/5 border border-white/10 rounded-xl p-4 text-center mb-4 f1-font" placeholder="ENTER CODE" value={roomInput} onChange={e => setRoomInput(e.target.value.toUpperCase())} />
-                        <button onClick={() => handleJoin(roomInput)} className="w-full bg-red-600 py-4 rounded-xl f1-font font-bold">JOIN PADDOCK</button>
+                <div className="max-w-md mx-auto p-6 pt-16">
+                    <h1 className="f1-font text-center text-5xl mb-12 glow-text">F1 <span className="text-red-600">PADDOCK</span></h1>
+                    <div className="glass rounded-[2rem] p-8 mb-8 flex flex-col items-center">
+                        <input className="w-full bg-white/5 border border-white/10 rounded-xl p-4 text-center mb-4 f1-font uppercase" placeholder="Enter Room Code" value={roomInput} onChange={e => setRoomInput(e.target.value)} />
+                        <button onClick={() => joinRoom(roomInput)} className="w-full bg-red-600 py-4 rounded-xl f1-font font-bold mb-4">JOIN ROOM</button>
+                        <button onClick={async () => {
+                            const name = prompt("Enter Paddock Name:");
+                            if(!name) return;
+                            const code = Math.random().toString(36).substring(2,6).toUpperCase();
+                            const { data } = await sb.from('f1_rooms').insert([{ name, code, data: {participants:[], sub_rooms:[]} }]).select().single();
+                            if(data) joinRoom(code);
+                        }} className="text-xs opacity-50 f1-font underline">OR CREATE NEW</button>
                     </div>
-                    <div className="space-y-3">
-                        {localHistory.map(r => (
-                            <div key={r.code} onClick={() => handleJoin(r.code)} className="glass p-4 rounded-xl flex justify-between cursor-pointer">
+                    <div className="space-y-2">
+                        {localRooms.map(r => (
+                            <div key={r.code} onClick={() => joinRoom(r.code)} className="glass p-4 rounded-xl flex justify-between cursor-pointer hover:bg-white/5">
                                 <span className="f1-font text-xs italic">{r.name}</span>
-                                <span className="text-[10px] opacity-40">#{r.code}</span>
+                                <span className="text-[10px] opacity-30 font-mono tracking-widest">#{r.code}</span>
                             </div>
                         ))}
                     </div>
@@ -123,109 +126,23 @@
                 return (
                     <div className="max-w-md mx-auto p-6">
                         <div className="flex justify-between items-center mb-10">
-                            <button onClick={() => setView('lander')} className="text-[10px] opacity-40">EXIT</button>
-                            <h2 className="f1-font text-xl italic">{room.name}</h2>
-                            <button onClick={() => setDrawerOpen(true)} className="bg-red-600/20 text-red-500 px-3 py-1 rounded-full text-[10px]">GRID</button>
+                            <button onClick={() => setView('lander')} className="text-[10px] opacity-40 f1-font">← Exit</button>
+                            <h2 className="f1-font text-xl italic glow-text">{room.name}</h2>
+                            <button onClick={() => setDrawerOpen(true)} className="bg-red-600 text-white px-3 py-1 rounded-lg text-[10px] f1-font">GRID</button>
                         </div>
-                        <div className="flex items-end justify-center gap-2 h-48 mb-12">
+
+                        <div className="flex items-end justify-center gap-2 h-48 mb-12 px-2">
                             {podium.map((p, i) => (
                                 <div key={i} className="flex-1 flex flex-col items-center">
                                     <span className="text-[8px] font-bold mb-1 truncate w-full text-center">{p?.name || '---'}</span>
-                                    <div className="podium-bar w-full rounded-t-lg" style={{ 
-                                        height: p ? (i===1 ? '120px' : i===0 ? '80px' : '50px') : '20px',
-                                        backgroundColor: p ? TEAM_COLORS[p.team] : '#222'
+                                    <div className="podium-bar w-full rounded-t-lg shadow-lg" style={{ 
+                                        height: p ? (i===1 ? '130px' : i===0 ? '85px' : '55px') : '20px',
+                                        backgroundColor: p ? TEAM_COLORS[p.team] : '#1a1a1a'
                                     }} />
-                                    <span className="text-[10px] mt-1 font-bold">{p ? calculateAcc(p.id) : 0}%</span>
+                                    <span className="text-[10px] mt-1 font-bold f1-font">{p ? calculateAcc(p.id) : 0}%</span>
                                 </div>
                             ))}
                         </div>
+
                         <div className="flex justify-between items-center mb-6">
-                            <h3 className="f1-font text-xs opacity-40">SUB ROOMS</h3>
-                            <button onClick={() => {
-                                const name = prompt("Race/Sub-room Name?");
-                                if(name) {
-                                    const newSub = { id: Date.now(), name, predictions: [] };
-                                    updateRemote({ data: { ...room.data, sub_rooms: [...room.data.sub_rooms, newSub] } });
-                                }
-                            }} className="bg-white text-black text-[10px] px-2 py-1 rounded font-bold">+ ADD</button>
-                        </div>
-                        <div className="grid grid-cols-2 gap-3">
-                            {room.data.sub_rooms.map(s => (
-                                <div key={s.id} onClick={() => { setActiveSubId(s.id); setView('sub-room'); }} className="glass p-6 rounded-2xl text-center cursor-pointer">
-                                    <p className="f1-font text-[10px] italic">{s.name}</p>
-                                </div>
-                            ))}
-                        </div>
-                        {/* Add Grid Drawer logic here if needed */}
-                    </div>
-                );
-            }
-
-            if (view === 'sub-room') {
-                const sub = room.data.sub_rooms.find(s => s.id === activeSubId);
-                return (
-                    <div className="max-w-md mx-auto p-6">
-                        <button onClick={() => setView('room')} className="text-[10px] opacity-40 mb-8">← BACK</button>
-                        <h2 className="f1-font text-3xl italic mb-10 text-center">{sub.name}</h2>
-                        <div className="space-y-3">
-                            {room.data.participants.map(p => (
-                                <div key={p.id} onClick={() => { setActiveUserId(p.id); setView('preds'); }} className="glass p-5 rounded-2xl flex justify-between items-center border-l-4" style={{borderColor: TEAM_COLORS[p.team]}}>
-                                    <span className="f1-font text-sm italic">{p.name}</span>
-                                    <span className="f1-font text-xl text-red-600">{calculateAcc(p.id, sub)}%</span>
-                                </div>
-                            ))}
-                        </div>
-                    </div>
-                );
-            }
-
-            if (view === 'preds') {
-                const sub = room.data.sub_rooms.find(s => s.id === activeSubId);
-                const user = room.data.participants.find(u => u.id === activeUserId);
-                const userPreds = sub.predictions.filter(p => p.userId === user.id);
-
-                const savePreds = (newList) => {
-                    const newSubs = room.data.sub_rooms.map(s => s.id === activeSubId ? {...s, predictions: newList} : s);
-                    updateRemote({ data: { ...room.data, sub_rooms: newSubs } });
-                };
-
-                return (
-                    <div className="max-w-md mx-auto p-6">
-                        <button onClick={() => setView('sub-room')} className="text-[10px] opacity-40 mb-8">← BACK</button>
-                        <h2 className="f1-font text-2xl mb-1 italic">{user.name}</h2>
-                        <p className="text-[10px] opacity-30 mb-8 uppercase font-bold">{sub.name}</p>
-                        
-                        <div className="flex gap-2 mb-8">
-                            <input className="flex-1 bg-white/5 border border-white/10 p-4 rounded-xl text-sm" placeholder="NEW PREDICTION..." value={newPredText} onChange={e => setNewPredText(e.target.value)} />
-                            <button onClick={() => {
-                                if(!newPredText) return;
-                                const n = { id: Date.now(), userId: user.id, text: newPredText, done: false };
-                                savePreds([...sub.predictions, n]);
-                                setNewPredText('');
-                            }} className="bg-red-600 px-6 rounded-xl f1-font text-xs">ADD</button>
-                        </div>
-
-                        <div className="space-y-3">
-                            {userPreds.map(p => (
-                                <div key={p.id} className="glass p-5 rounded-2xl flex items-center justify-between">
-                                    <span className={`text-sm italic ${p.done ? 'line-through opacity-20' : ''}`}>{p.text}</span>
-                                    <div className="flex items-center gap-4">
-                                        <input type="checkbox" checked={p.done} onChange={() => {
-                                            const updated = sub.predictions.map(x => x.id === p.id ? {...x, done: !x.done} : x);
-                                            savePreds(updated);
-                                        }} className="w-5 h-5 accent-red-600" />
-                                        <button onClick={() => savePreds(sub.predictions.filter(x => x.id !== p.id))} className="text-red-600">✕</button>
-                                    </div>
-                                </div>
-                            ))}
-                        </div>
-                    </div>
-                );
-            }
-        };
-
-        const root = ReactDOM.createRoot(document.getElementById('root'));
-        root.render(<App />);
-    </script>
-</body>
-</html>
+                            <h3 className="f1-font text-xs opacity-40">Sub Rooms / Races</h3>
