--- a/index.html
+++ b/index.html
@@ -109,9 +109,17 @@ const supabaseClient = createClient(
 );
 
 const TEAM_COLORS = {
-  Ferrari:'#DC0000', Mercedes:'#00D2BE', Red Bull Racing:'#0600EF',
-  McLaren:'#FF8700', Alpine:'#0090FF', Aston Martin:'#006F62',
-  Alfa Romeo:'#900000', Haas:'#FFFFFF', AlphaTauri:'#2B4562', Williams:'#005AFF'
+  "Ferrari": "#DC0000",
+  "Mercedes": "#00D2BE",
+  "Red Bull Racing": "#0600EF",
+  "McLaren": "#FF8700",
+  "Aston Martin": "#006F62",
+  "Alpine": "#0090FF",
+  "Williams": "#005AFF",
+  "Haas": "#FFFFFF",
+  "VCARB": "#1E1E1E",
+  "Audi": "#2B2B2B",
+  "Cadillac": "#0A1AFF"
 };
 const TEAMS = Object.keys(TEAM_COLORS);
 
